--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,10 @@
   --foreground: #ededed;
 }
 
+::backdrop {
+  background-color: rgba(0, 0, 0, 0.65);
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
